# ocaml-hlclock

./: .gitignore  .ocamlinit  CHANGES.md  CONTRIBUTING.md  Makefile  README.md  dune-project  hlclock.opam  hlclock.opam.locked  index.html
.github/workflows/: ci.yml
_coverage/: index.html
_coverage/lib/: hlclock.ml.html
hlclock/: index.html
hlclock/Hlclock/: index.html
hlclock/Hlclock/Timestamp/: index.html
hlclock/Hlclock/Timestamp/O/: index.html
hlclock/Hlclock/module-type-Timestamp/: index.html
lib/: dune  hlclock.ml  hlclock.mli
test/: dune  hlclock_test.ml
